css: fix dark mode text color

--- a/src/components/CourseBoard/CourseBoard.css
+++ b/src/components/CourseBoard/CourseBoard.css
@@ -31,13 +31,9 @@
     overflow-x: none;
 }
 
-/* #course {
-    border-radius: 0 !important;
-} */
-
-/* .ant-select-selector, .ant-select-dropdown {
-    border-radius: 25px !important;
-} */
+#course {
+    color: white !important;
+}
 
 @media screen and (max-width: 420px) {
     .add-new-course {
